<resources>
    <string name="app_name">DoSoptTemplate</string>
    <string name="tv_main_id_title">아이디:</string>
    <string name="tv_main_spju_title">주량:</string>
    <string name="tv_main_nickname_title">이름:</string>
    <string name="tv_sign_in_title">Hello DO SOPT!</string>
    <string name="tv_sign_in_id_title">ID</string>
    <string name="etv_sign_in_id">아이디를 입력</string>
    <string name="tv_sign_in_pwd_title">PASSWORD</string>
    <string name="etv_sign_in_pwd">비번를 입력</string>
    <string name="btn_sign_in_sign_up">회원가입</string>
    <string name="btn_sign_in_sign_in">로그인</string>
    <string name="tv_sign_up_title">Sign Up</string>
    <string name="tv_sign_up_id_title">ID</string>
    <string name="etv_sign_up_id">아이디를 입력</string>
    <string name="tv_sign_up_pwd">PASSWORD</string>
    <string name="etv_sign_up_pwd">비번를 입력</string>
    <string name="tv_sign_up_nickname">닉네임</string>
    <string name="etv_sign_up_nickname">닉네줄 입력</string>
    <string name="tv_sign_up_soju">주량</string>
    <string name="etv_sign_up_soju">주량 입력</string>
    <string name="btn_sign_up_sign_up">회원가입</string>
    <string name="nav_home">홈</string>
    <string name="nav_android">두안드로이드</string>
    <string name="nav_my_page">my page</string>
</resources>